actual mvp. just fixed tiny spacing problem

--- a/css/about.css
+++ b/css/about.css
@@ -118,7 +118,7 @@ p {
     border: 2px solid black;
     border-radius: 12%;
     padding: 7.5px;
-    margin-top: 10px;
+    margin: 10px 0;
     width: 110px;
     height: 35px;
     text-align: center;
